--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@payloadcms/next-payload": "^0.1.11",
     "@payloadcms/richtext-slate": "^1.3.1",
     "@t3-oss/env-nextjs": "^0.7.3",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.17.15",
     "axios": "^1.6.5",
+    "escape-html": "^1.0.3",
     "flowbite": "^2.2.1",
     "lucide-react": "^0.312.0",
     "negotiator": "^0.6.3",
@@ -28,10 +30,12 @@
     "slugify": "^1.6.6",
     "swiper": "^11.0.5",
     "use-debounce": "^10.0.0",
+    "usehooks-ts": "^2.9.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
+    "@types/escape-html": "^1.0.4",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
