--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.496.0",
+    "@aws-sdk/lib-storage": "^3.496.0",
     "@formatjs/intl-localematcher": "^0.5.4",
     "@payloadcms/bundler-webpack": "^1.0.6",
     "@payloadcms/db-mongodb": "^1.3.2",
     "@payloadcms/next-payload": "^0.1.11",
+    "@payloadcms/plugin-cloud-storage": "^1.1.1",
     "@payloadcms/richtext-slate": "^1.3.1",
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.17.15",
+    "aws-crt": "^1.21.0",
     "axios": "^1.6.5",
     "escape-html": "^1.0.3",
     "flowbite": "^2.2.1",
