--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@payloadcms/next-payload": "^0.1.11",
     "@payloadcms/plugin-cloud-storage": "^1.1.1",
     "@payloadcms/richtext-slate": "^1.3.1",
+    "@prisma/client": "^5.8.1",
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.17.15",
